# ga

./: CMakeLists.txt  README.MD
src/: ga.cpp
src/examples/: CMakeLists.txt  optimisation.cpp  uniform_distribution_problem.cpp
src/include/: api.hpp  detail.hpp  functions.hpp  ga.hpp  genotype_constructor.hpp  genotype_model.hpp  logger.hpp  population.hpp  random_generator.hpp  statistics.hpp
src/include/detail/: detail.hpp
src/include/logging/: console_logger.hpp  logger.hpp
src/include/operators/: crossover.hpp  mutation.hpp
src/tests/: CMakeLists.txt  test.cpp
